Fix responsivness for some mobile devices to increase readability of footer's buttons and score section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,7 +27,7 @@ html {
 /* Styling for header and footer sections */
 header,
 footer {
-    height: 10vh;
+    height: 15vh;
     text-align: center;
     background: var(--dark-shades-color);
     color: var(--light-shades-color);
@@ -45,11 +45,12 @@ footer {
     position: absolute;
     width: 100%;
     font-size: 12px;
+    padding-bottom: 50px;
 }
 
 /* Styling for main content section */
 main {
-    height: 80vh;
+    height: 70vh;
     overflow: hidden;
 }
 
@@ -77,7 +78,7 @@ main {
 /* Specific styling for score-board section */
 .score-board {
     justify-content: space-between;
-    margin: 20px 0;
+    margin: 0 auto;
 }
 
 .score-board p {
@@ -263,6 +264,7 @@ main {
         position: fixed;
         left: 0;
         bottom: 20px;
+        padding-bottom: 10px;
     }
 }
 
